--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <title>scratch.js</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><path fill=%22%239013fe%22 d=%22M21.50 23.38L28.26 12.66L78.50 43.73L78.50 56.27L28.65 87.34L21.50 77.07L66.02 50.03L21.50 23.38Z%22></path></svg>" />
 </head>
 <body>
